# riscv-emulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
boot/: device_tree.dts  init.c  initramfs.txt  riscv32-unknown-linux-gnu.config  riscv_emulator_defconfig
lib/: CMakeLists.txt
lib/include/emu/: address_space.hpp  core.hpp  literals.hpp  register.hpp  utils.hpp
lib/include/emu/devices/: 8250_uart.hpp  ram.hpp
lib/include/emu/devices/riscv/: mmu.hpp
lib/include/emu/riscv/: core.hpp  cpu.hpp  instructions.hpp  machine_mode_firmware.hpp  machine_mode_firmware_extensions.hpp
lib/source/: address_space.cpp
lib/source/riscv/: core.cpp
main/: CMakeLists.txt
main/source/: main.cpp
